        DependsOnName='Me.Class.ShortName',
        DependsOnValue='MNK,SHD,ROG'
    }
```
    This will result in the `CWTN.Mode` property only being observed on monks, shadow knights and rogues.
- Set initial window size if window has default 32x32 size.
- Exit if game state is not INGAME.
- Append character name to window ID so characters can have separate window settings.
1.7.3
- Fix for toons being randomly removed from the table while sorting by something other than the default Name column
1.7.2
- Remove debug accidentally left in 1.7.1 which caused an immediate crash
1.7.1
- Fixes to Push/PopID for context menus and buttons in table
1.7.0
- Update to use ImGui Table API
1.6.0
- Add sorting by columns
- Add PeerSource to allow getting peer list from either dannet or netbots
- Add "FromIDProperty" to spawn properties to allow getting spawn properties
  for something other than botName. The referred property must be a Spawn ID.
  For example:
    NetBots property: {Name='TargetID'}
    Spawn property:   {Name='CleanName',FromIDProperty='TargetID'}
    Then assign a column to display property 'CleanName'
- Move /boxhudanon under new /bhadmin
- Add some commands to reset observers under /bhadmin:
  /bhadmin (enables admin mode, hides the UI)
  /bhadmin reset toonname (resets observers for the toon toonname)
- Add a /bhversion command
- Add a /bhhelp command
1.5.0
- Add some right click actions on name buttons
- Add /boxhudanon binding to replace names with class names in name column
  Mostly so I don't have to draw over names in screenshots
- Try to adjust observe timeouts based on # of peers
- Misc cleanup
1.4.4
- Fix for some columns showing |server_name instead of correct data
- Make sure peer list is initialized before UI
1.4.3
- Fix conditions broken by 1.4.2 tostring() replacements
1.4.2
- Fix gsub in button commands
- Fix handling button commands with /noparse
- Swap tostrings for mq.TLO.Property()
1.4.1
- Fix for zone shortname formats
- Fix text coloring